--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "concurrently": "^6.0.0",
     "lite-server": "^2.6.1",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "eslint": "^9.19.0"
   }
 }
